fix: keep page order in scoped replicas so reply chains sync
Set.copyOf dropped the parent-before-reply order a page and a need
answer carry, so the engine could adopt or push a reply before its
parent and MessageStore refused it, failing the whole page every round.
The scoped view now keeps insertion order; a 30-message reply chain is
pulled and pushed over the protocol-4 pipe in one round each.